--- a/app/views/AudioStop.xml
+++ b/app/views/AudioStop.xml
@@ -6,9 +6,10 @@
 		<View class="container" layout="vertical">
 			
 			<ScrollView id="stopDescriptionScroll" height="75%" width="100%" showVerticalScrollIndicator="true" layout="vertical">
-								
-				<ScrollableView id="stopImagesScroll" showPagingControl="false" height="205" width="100%">
-					<ImageView image="{$.stopModel.stopImage}" id="imgStopCover" width="Titanium.UI.SIZE" top="10" bottom="10" left="10" right="10" />
+				<!-- height was 205 -->				
+				<ScrollableView id="stopImagesScroll" showPagingControl="false" height="305" width="100%">
+					<!--<ImageView image="{$.stopModel.stopImage}" id="imgStopCover" width="Titanium.UI.SIZE" top="10" bottom="10" left="10" right="10" />-->
+					<ImageView image="{$.stopModel.stopImage}" />					
 				</ScrollableView>
 				
 				<!--
@@ -16,8 +17,8 @@
 					<ImageView image="{$.stopModel.stopImage}" id="imgStopCover" />
 				</ScrollView>
 				-->
-				
-				<Label id="audioStopLabel" textAlign="left" height="Titanium.UI.SIZE" width="80%" top='25' bottom='15' html="{$.stopModel.stopDescription}" />
+				<Label id="lblAudioStopTitle" html="{$.stopModel.stopName}" />
+				<Label id="audioStopLabel" textAlign="left" height="Titanium.UI.SIZE" width="80%" html="{$.stopModel.stopDescription}" />
 				
 			</ScrollView>
 			
