--- a/app/views/ImageMediaViewer.xml
+++ b/app/views/ImageMediaViewer.xml
@@ -2,7 +2,7 @@
 	<Window id="ImageMediaViewer" title="Media Viewer" class="container" fullscreen="true">
 		
 		<ScrollView id="scroller" width="Titanium.UI.FILL" height="Titanium.UI.FILL">
-			<ImageView image="transparentClose.png" onClick="handleClose" zIndex="5" />
+			<ImageView id="closeImage" image="transparentClose.png" onClick="handleClose" zIndex="5" />
 		</ScrollView>
 	</Window>
 </Alloy>
